force-app/main/default/objects/Scope3PcmtSummary/fields/Bulk_Matching_Cache_Hits__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Matching_Cache_Hits__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of items that used cached LLM responses (avoided LLM API calls).</description>
    <label>Bulk Matching Cache Hits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>