force-app/main/default/objects/Scope3PcmtSummary/fields/Bulk_Matching_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Matching_Completed_Date__c</fullName>
    <description>Date and time when the bulk matching process completed.</description>
    <label>Bulk Matching Completed Date</label>
    <type>DateTime</type>
</CustomField>