force-app/main/default/objects/Scope3PcmtSummary/fields/Bulk_Matching_Cost_Saved__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Matching_Cost_Saved__c</fullName>
    <description>Estimated cost savings from cache hits and deduplication (in USD). Calculated as (Cache_Hits + Deduplicated) × $0.0225 per LLM call.</description>
    <label>Bulk Matching Cost Saved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>