force-app/main/default/objects/Scope3PcmtSummary/fields/Bulk_Matching_Deduplicated__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Matching_Deduplicated__c</fullName>
    <description>Number of items that reused matches from duplicate category combinations within the same batch (avoided LLM API calls).</description>
    <label>Bulk Matching Deduplicated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
</CustomField>