force-app/main/default/objects/Scope3PcmtSummary/fields/Bulk_Matching_Items_Matched__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Matching_Items_Matched__c</fullName>
    <description>Number of items successfully matched with high confidence (auto-applied).</description>
    <label>Bulk Matching Items Matched</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
</CustomField>