force-app/main/default/objects/Scope3PcmtSummary/fields/Bulk_Matching_Items_Needing_Review__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Matching_Items_Needing_Review__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of items that need manual review (low confidence or no match found).</description>
    <label>Bulk Matching Items Needing Review</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>