force-app/main/default/objects/Scope3PcmtSummary/fields/Bulk_Matching_Items_Processed__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Matching_Items_Processed__c</fullName>
    <description>Total number of Scope3PcmtItem records processed during bulk matching.</description>
    <label>Bulk Matching Items Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
</CustomField>