force-app/main/default/objects/Scope3PcmtSummary/fields/Bulk_Matching_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Matching_Job_Id__c</fullName>
    <description>Salesforce Batch Job ID for tracking the bulk matching process.</description>
    <label>Bulk Matching Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>