force-app/main/default/objects/Scope3PcmtSummary/fields/Bulk_Matching_LLM_Calls__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Matching_LLM_Calls__c</fullName>
    <description>Actual number of LLM API calls made during bulk matching (after cache and deduplication).</description>
    <label>Bulk Matching LLM Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
</CustomField>