force-app/main/default/objects/Scope3PcmtSummary/fields/Bulk_Matching_Status__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Matching_Status__c</fullName>
    <description>Current status of bulk matching process for this procurement summary.</description>
    <label>Bulk Matching Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>